fix portrait display on mobile

--- a/css/agency.css
+++ b/css/agency.css
@@ -343,7 +343,7 @@ header .intro-text .intro-heading {
 
 @media(min-width:768px){
     header .intro-text {
-        padding-top: 450px;
+        padding-top: 400px;
         padding-bottom: 200px;
     }
 
